--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <a  class="logo-link link" href="">Web<span class="logo_header">Studio</span></a>
             <nav class="nav-list list">
                 <ul class="list">
-                    <li class="nav-list-item"><a class="nav-list-link link" href="">Студія</a>
+                    <li class="nav-list-item"><a class="nav-list-link link" href="./index.html">Студія</a>
                     </li>
-                    <li class="nav-list-item"><a class="nav-list-link link" href="">Портфоліо</a>
+                    <li class="nav-list-item"><a class="nav-list-link link" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="nav-list-item"><a class="nav-list-link link" href="">Контакти</a>
                     </li>
