--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                 <ul class="list">
                     <li class="nav-list-item"><a class="nav-list-link link"  href="./index.html">Студія</a>
                     </li>
-                    <li class="nav-list-item"><a class="nav-list-link link"  href="">Портфоліо</a>
+                    <li class="nav-list-item"><a class="nav-list-link link"  href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="nav-list-item"><a class="nav-list-link link"  href="">Контакти</a>
                     </li>
